--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git://github.com/cobyism/ghost-on-heroku.git"
+    "url": "git://github.com/ryanvanderpol/ghost-on-heroku.git"
   },
   "bugs": "https://github.com/TryGhost/Ghost/issues",
   "private": true,
   "version": "0.5.10",
   "dependencies": {
     "ghost": "0.5.10",
-    "pg": "latest"
+    "pg": "latest",
+    "when": "*",
+    "aws-sdk": "*"
   },
   "engines": {
     "node": "~0.10.0"
